# mc-gibbs

./: README.md  ex_sampling.py  gibbs_points.py  job_thinning.slurm  mala_jax.ipynb  mcmc_samplers.py  pyproject.toml  test.slurm
examples/: ex_persistence.py  ex_sampling.py  ex_sampling_approx_pot.py  ex_thinning.py
notebooks/: xps_gretsi.ipynb
xps/: compute_all_energies.py  compute_all_var.py  compute_energies.py  compute_energy_pi.py  compute_variance.py  plot_energies.py  plot_points.py  plot_var.py  points_thinning.py  run_xp_gibbs_coulomb.py  run_xp_gibbs_mh.py  run_xp_mcmc.py  run_xp_mcmc_local.py  run_xp_thinning.py  xp_gibbs_coulomb.py  xp_gibbs_mh.py  xp_gibbs_temp.py  xp_mcmc.py  xp_mcmc_temp.py  xp_thinning.py
xps2/: compute_all_energies.py  compute_coverages.py  compute_coverages.slurm  compute_energy_target.py  dic_last_sample_gibbs.py  gibbs_mh_tuning.py  run_all_energies.py  run_energy_target.py  run_xp_coverage_kt.py  run_xp_coverage_mcmc.py  run_xp_gibbs_coverage.py  run_xp_gibbs_coverage_mh.py  samples_coverage_gibbs.py  samples_coverage_gibbs_mh.py  samples_coverage_kt.py  samples_mcmc_coverage.py  sanity_checks_gibbs.py
